# paas-charm

./: .gitignore  .licenserc.yaml  .pylintrc  .python-version  .readthedocs.yaml  .trivyignore  .woke.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION_TESTING.md  README.md  app.py  artifacts.yaml  concierge-microk8s.yaml  concierge.yaml  index.html  pyproject.toml  renovate.json  requirements.txt  spread.yaml  tox.ini  trivy.yaml  unit-test-installation.sh
.github/: .jira_sync_config.yaml  pull_request_template.md
.github/workflows/: build-artifacts.yml  check-removed-urls.yml  create-release-notes.yaml  docs_rtd.yaml  integration-test.yml  integration_test.yaml  periodic-style-checks.yml  release.yaml  sphinx-python-dependency-build-checks.yml  spread_test.yaml  test.yaml  weekly-agents-md-maintenance.lock.yml  weekly-agents-md-maintenance.md
1120/: index.html
1120/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1120/export/: influxDbData.txt  prometheusData.txt
1120/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
1120/widgets/: executors.json  severity.json  status-chart.json  suites.json  summary.json
1121/: index.html
1121/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1121/export/: influxDbData.txt  prometheusData.txt
1121/history/: history.json
1121/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  suites.json  summary.json
1137/: index.html
1137/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1137/export/: influxDbData.txt  prometheusData.txt
1137/history/: categories-trend.json
1137/widgets/: duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
1138/: index.html
1138/export/: influxDbData.txt
1138/history/: duration-trend.json  history.json
1138/widgets/: categories-trend.json  executors.json  history-trend.json  retry-trend.json
1139/: index.html
1139/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1139/export/: influxDbData.txt  prometheusData.txt
1139/history/: history-trend.json  history.json  retry-trend.json
1139/widgets/: categories-trend.json  duration-trend.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
1140/: index.html
1140/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1140/export/: influxDbData.txt  prometheusData.txt
1140/history/: categories-trend.json  retry-trend.json
1140/widgets/: duration-trend.json  executors.json  history-trend.json  severity.json  status-chart.json  suites.json  summary.json
1141/: index.html
1141/export/: influxDbData.txt
1141/history/: categories-trend.json  duration-trend.json  history.json
1141/widgets/: executors.json  history-trend.json  retry-trend.json
1142/: index.html
1142/export/: influxDbData.txt
1142/history/: duration-trend.json  retry-trend.json
1142/widgets/: categories-trend.json  executors.json  history-trend.json
1143/: index.html
1143/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1143/export/: influxDbData.txt  prometheusData.txt
1143/history/: duration-trend.json  history.json  retry-trend.json
1143/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  severity.json  suites.json  summary.json
1144/: index.html
1144/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1144/export/: influxDbData.txt  prometheusData.txt
1144/history/: duration-trend.json  history.json  retry-trend.json
1144/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  severity.json  suites.json  summary.json
1145/: index.html
1145/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1145/export/: influxDbData.txt  prometheusData.txt
1145/history/: history-trend.json  history.json  retry-trend.json
1145/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  severity.json  suites.json  summary.json
1147/: index.html
1147/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1147/export/: influxDbData.txt  prometheusData.txt
1147/history/: categories-trend.json  duration-trend.json
1147/widgets/: executors.json  history-trend.json  retry-trend.json  (+4 more)
1148/: index.html
1149/: index.html
1150/: index.html
1151/: index.html
1152/: index.html
1153/: index.html
1154/: index.html
1155/: index.html
1156/: index.html
1157/: index.html
1158/: index.html
1159/: index.html
1169/: index.html
1172/: index.html
1173/: index.html
1197/: index.html
1201/: index.html
1226/: index.html
1244/: index.html
1245/: index.html
1246/: index.html
1248/: index.html
1267/: index.html
1268/: index.html
1327/: index.html
1399/: index.html
1482/: index.html
1492/: index.html
1516/: index.html
1542/: index.html
1618/: index.html
1650/: index.html
1663/: index.html
1665/: index.html
1672/: index.html
1696/: index.html
1710/: index.html
1718/: index.html
1723/: index.html
1728/: index.html
docs/: .custom_wordlist.txt  .gitignore  .readthedocs.yaml  .wokeignore  Makefile  Makefile.sp  changelog.md  conf.py  doc-cheat-sheet.rst  index.rst  requirements.txt
examples/flask/charm/: charmcraft.yaml  paas-config.yaml  pyproject.toml  requirements.txt
examples/flask/charm/src/: charm.py
paas_app_charmer/: charm.py
scripts/: install_charmcraft.sh  install_custom_charmcraft.sh  use-rockcraft-fork.sh
tests/: conftest.py
(+15774 files in other folders)
