# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "paas-charm"
version = "2.0.dev0"
description = "Companion library for 12-factor app support in Charmcraft & Rockcraft."
readme = "README.md"
authors = [
    {name = "Canonical IS DevOps team", email="is-devops-team@canonical.com"},
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cosl==1.9.1",
    "dpcharmlibs-interfaces==1.0.2",
    "Jinja2==3.1.6",
    "jsonschema==4.26.0",
    "ops==3.7.1",
    "pydantic==2.13.4",
]

[project.urls]
Repository = "https://github.com/canonical/paas-charm"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
# opcli is published only from the charm-ci git repository, not PyPI.
opcli = { git = "https://github.com/canonical/charm-ci.git", branch = "main" }

[tool.setuptools.package-data]
paas_charm = ["**/cos/**", "**/cos/**/.**", "**/*.j2", "**/templates/**/*.py", "**/templates/**/*.json"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
pythonpath = [
  "examples/flask/charm/lib",
  "examples/django/charm/lib",
  "examples/fastapi/charm/lib",
  "examples/go/charm/lib",
  "examples/expressjs/charm/lib",
  "examples/flask-minimal/charm/lib",
  "examples/springboot/charm/lib",
  "lib",
  "src"
]

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]
extend-exclude = '''

(
  examples/flask/charm/lib/.*
  |   examples/flask-minimal/charm/lib/.*
  |   examples/django/charm/lib/.*
  |   examples/fastapi/charm/lib/.*
  |   examples/go/charm/lib/.*
  |   examples/expressjs/charm/lib/.*
  |   examples/springboot/charm/lib/.*
)
'''

[tool.isort]
line_length = 99
profile = "black"
skip = [
  "examples/flask/charm/lib",
  "examples/flask-minimal/charm/lib",
  "examples/django/charm/lib",
  "examples/fastapi/charm/lib",
  "examples/go/charm/lib",
  "examples/expressjs/charm/lib",
  "examples/springboot/charm/lib",
]

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv", "examples/*/lib/**"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = [
    "tests/*:D100,D101,D102,D103,D104,D205,D212,D415,DCO020,DCO030,DCO050",
    "src/paas_charm/templates/_gunicorn_json_logging.py:DCO010,DCO020,DCO030",
]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"

[tool.bandit]
exclude_dirs = ["venv/", "tests/"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py312"
line-length = 99

[dependency-groups]
unit = [
    "cosl==1.9.1",
    "coverage[toml]==7.14.1",
    "gunicorn==26.0.0",
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "ops[testing]==3.7.1",
    "pydantic[email]==2.13.4",
    "pytest==9.1.1",
]
lint = [
    "black",
    "codespell",
    "flake8",
    "flake8-builtins",
    "flake8-copyright",
    "flake8-docstrings>=1.6.0",
    "flake8-docstrings-complete>=1.0.4",
    "flake8-test-docs",
    "isort",
    "mypy",
    "pep8-naming",
    "pydocstyle",
    "pylint",
    "pyproject-flake8",
    "snowballstemmer<3.0.0",
    "types-PyYAML",
    "types-requests",
]
static = [
    "bandit[toml]",
]
integration-tests = [
    "pytest>=9.1.1",
    "aiohttp==3.11.7",
    "cosl==1.9.1",
    "saml-test-helper @ git+https://github.com/canonical/saml-test-idp.git",
    "jubilant==1.7.0",
    "juju==3.6.1.2",
    "minio==7.2.14",
    "ops==3.7.1",
    "tenacity==9.0.0",
    "playwright==1.53.0",
    "lightkube==0.21.0",
    "pytest-jubilant>=2,<3",
    "opcli"
]
