# Copyright 2026 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "flask-k8s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cosl==1.9.1",
    "dpcharmlibs-interfaces==1.0.2",
    "jinja2==3.1.6",
    "jsonschema==4.26",
    "ops==3.7.1",
    "pydantic==2.13.3",
    "paas-charm==1.11.3",
]
